src/main/java/fr/alten/test_back/error/package-info.java
/**
 * Package containing application errors, used to customize error messages.
 */
package fr.alten.test_back.error;
